--- a/estilo.css
+++ b/estilo.css
@@ -62,3 +62,78 @@ body {
   box-shadow: 0px 10px 20px -8px rgba(0, 0, 0, 0.5);
 
 }
+
+/* Bandeira do CANADÁ by InfoDevEstudent - Sergio Felipe */
+.wrapper{
+  height: 400px;
+  width: 390px;
+  position: relative;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+.wrapper .card{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  background: #fff;
+  border-radius: 10px;
+  transform: translateY(0deg);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  box-shadow: 0px 10px 15px rgb(0, 0, 0,0.1);
+  transition: transform 0.7s cubic-bezier(0.4,0.2,0.2,1);
+}
+.front-face .title-front-face{
+  text-align: center;
+  /* padding: 10px; */
+  margin: 0;
+  font-size: 30px;
+  font-family: Helvetica;
+}
+.front-face p{
+  text-align: justify;
+  padding: 0px 10px;
+  margin: 0;
+  font-family: Helvetica;
+}
+.wrapper:hover > .front-face{
+  transform: rotateY(-180deg);
+}
+.wrapper .card img{
+  /* height: 100%; */
+  width: 100%;
+  /* flex: 1; */
+  object-fit: cover;
+  border-radius: 10px;
+}
+.wrapper .back-face{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  transform: rotateX(180deg);
+}
+.wrapper:hover > .back-face{
+  transform: rotateY(0deg);
+}
+.wrapper .back-face img{
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  padding: 5px;
+  border-radius: 50%;
+  background: linear-gradient(375deg, #1cc7d0, #2ede98);
+}
+.wrapper .back-face .info{
+  text-align: center;
+}
+.back-face .info .title{
+  font-size: 30px;
+  font-weight: 500;
+  font-family: Helvetica;
+}
+.back-face .info p{
+  font-size: 1.3rem;
+  font-family: Helvetica;
+}
