--- a/estilo.css
+++ b/estilo.css
@@ -1,64 +1,89 @@
-
+/* Reset padrão */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
-.content {
-  max-width: 1220px;
-  margin: 0 auto;
-}
+
 body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  background-color: #e1cac0;
+  margin: 0;
 }
+
 .main-bg {
-  padding: 20px;
-  height: max-content;
-}
-
-.main {
-  display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-
-  gap: 20px;
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .main-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 5px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  font-size: 30px;
-  font-size: 20px;
+  width: 80%;
+  max-width: 800px;
+  text-align: center;
 }
 
-.main-content h1,
-.main-content p {
-  padding-bottom: 20px;
+.content-section {
+  margin-bottom: 20px;
+}
+
+.bandeira img {
+  width: 100px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #555;
+}
+
+p {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  color: #666;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn_resumo {
-  background-color: #f083e7;
-  color: white;
-  text-decoration: none;
+  display: inline-block;
   padding: 10px 20px;
+  font-size: 1.2em;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
   border-radius: 5px;
-  transition: 0.3s all;
-  width: max-content;
+  text-decoration: none;
+  transition: background-color 0.3s;
 }
 
 .btn_resumo:hover {
-  display: inline-block;
-  background-color: #c941bd;
-  color: white;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  box-shadow: 0px 10px 20px -8px rgba(0, 0, 0, 0.5);
-
+  background-color: #0056b3;
 }
+
